# Stocks

./: .env  README.md  TODO.txt  backend.py  company_name_converter.py  company_name_manager.py  edgar_scraper.py  long_term_model.py  main.py  mentions.db  news_api.py  prediction.py  pyproject.toml  reddit_scraper.py  requirements.txt  stockDownloader.py  stockSearcher.html  stocktwits_scraper.py  storage.py  styles.css  vercel.json
company_models/: ADBE_long_term_model.keras  ADI_model.scaler.pk1  ADSK_long_term_model.keras  ADSK_model.scaler.pk1  AMAT_long_term_model.keras  AMD_model.scaler.pk1  AMZN_long_term_model.keras  ASML_long_term_model.keras  ASML_model.scaler.pk1  CDNS_long_term_model.keras  CMCSA_model.scaler.pk1  COST_long_term_model.keras  CRWD_long_term_model.keras  CRWD_model.scaler.pk1  CSCO_long_term_model.keras  CTSH_long_term_model.keras  DDOG_long_term_model.keras  DOCU_long_term_model.keras  EA_long_term_model.keras  EA_model.scaler.pk1  FTNT_long_term_model.keras  FTNT_model.scaler.pk1  GOOGL_long_term_model.keras  GOOG_long_term_model.keras  INTC_long_term_model.keras  INTC_model.scaler.pk1  INTU_long_term_model.keras  INTU_model.scaler.pk1  KLAC_long_term_model.keras  KLAC_model.scaler.pk1  LRCX_long_term_model.keras  LRCX_model.scaler.pk1  MCHP_long_term_model.keras  MDB_long_term_model.keras  META_long_term_model.keras  META_model.scaler.pk1  MRVL_long_term_model.keras  MRVL_model.scaler.pk1  MSFT_model.scaler.pk1  MU_long_term_model.keras  (+28 more)
data_adjusters/: dataManager.py  dataModifier.py  dates.csv  stockDownloader.py
model/: prediction.py  (+1 more)
(+98 files in other folders)
